website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.6.3/guides/docs/sidebar/index.mdx
---
slug: /sidebar
---

# 側邊欄

建立側邊欄有助於：

- 將多個**相關文件**分組
- 在這些文件上**顯示側邊欄**
- 提供**分頁導覽**功能，包含上一頁/下一頁按鈕

要在 Docusaurus 網站上使用側邊欄：

1. 定義一個側邊欄文件，導出一個包含[側邊欄物件](#sidebar-object)的字典。
2. 將其路徑傳遞給 `@docusaurus/plugin-docs` 插件，或通過 `@docusaurus/preset-classic` 傳遞。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          sidebarPath: './sidebars.js',
        },
      },
    ],
  ],
};
```

:::important[Node.js 運行環境]

側邊欄文件是在 Node.js 環境中運行的。您不能在該文件中使用或導入瀏覽器 API、React 或 JSX。

:::

本節概述了文件側邊欄的各種功能。在接下來的章節中，我們將更系統地介紹以下概念：

```mdx-code-block
import DocCardList from '@theme/DocCardList';

<DocCardList />
```

## 預設側邊欄 {#default-sidebar}

如果未指定 `sidebarPath`，Docusaurus 會根據 `docs` 文件夾的文件系統結構[自動生成側邊欄](autogenerated.mdx)：

```js title="sidebars.js"
export default {
  mySidebar: [
    {
      type: 'autogenerated',
      dirName: '.', // generate sidebar from the docs folder (or versioned_docs/<version>)
    },
  ],
};
```

您也可以明確地定義自己的側邊欄。

## 側邊欄物件 {#sidebar-object}

側邊欄的核心是一個由分類、文件連結和其他超連結組成的層次結構。

```ts
type Sidebar =
  // Normal syntax
  | SidebarItem[]
  // Shorthand syntax
  | {[categoryLabel: string]: SidebarItem[]};
```

例如：

```js title="sidebars.js"
export default {
  mySidebar: [
    {
      type: 'category',
      label: 'Getting Started',
      items: [
        {
          type: 'doc',
          id: 'doc1',
        },
      ],
    },
    {
      type: 'category',
      label: 'Docusaurus',
      items: [
        {
          type: 'doc',
          id: 'doc2',
        },
        {
          type: 'doc',
          id: 'doc3',
        },
      ],
    },
    {
      type: 'link',
      label: 'Learn more',
      href: 'https://example.com',
    },
  ],
};
```

這是一個導出一個名為 `mySidebar` 的側邊欄的側邊欄文件。它有三個頂層項目：兩個分類和一個外部連結。每個分類中包含幾個文件連結。

一個側邊欄文件可以包含[**多個側邊欄物件**](multiple-sidebars.mdx)，通過其物件鍵來識別。

```ts
type SidebarsFile = {
  [sidebarID: string]: Sidebar;
};
```

## 主題配置 {#theme-configuration}

### 可隱藏的側邊欄 {#hideable-sidebar}

通過啟用 `themeConfig.docs.sidebar.hideable` 選項，您可以讓整個側邊欄可隱藏，讓用戶能更專注於內容。這在中型屏幕（如平板電腦）上特別有用。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    docs: {
      sidebar: {
        hideable: true,
      },
    },
    // highlight-end
  },
};
```

### 自動折疊側邊欄分類 {#auto-collapse-sidebar-categories}

`themeConfig.docs.sidebar.autoCollapseCategories` 選項會在展開一個分類時折疊所有同級分類。這可以避免用戶打開過多分類，幫助他們專注於所選部分。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    docs: {
      sidebar: {
        autoCollapseCategories: true,
      },
    },
    // highlight-end
  },
};
```

## 傳遞自定義屬性 {#passing-custom-props}

要將自定義屬性傳遞給側邊欄項目，可在任何項目中添加可選的 `customProps` 物件。這對於通過 swizzling 渲染側邊欄項目的 React 組件來應用網站自定義非常有用。

```js
{
  type: 'doc',
  id: 'doc1',
  // highlight-start
  customProps: {
    badges: ['new', 'green'],
    featured: true,
  },
  // highlight-end
};
```

## 側邊欄麵包屑導覽 {#sidebar-breadcrumbs}

預設情況下，麵包屑導覽會顯示在頂部，使用當前頁面的「側邊欄路徑」。

可以通過插件選項禁用此行為：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          breadcrumbs: false,
        },
      },
    ],
  ],
};
```

## 複雜側邊欄範例 {#complex-sidebars-example}

來自 Docusaurus 網站的真實範例：

```mdx-code-block
import CodeBlock from '@theme/CodeBlock';

<CodeBlock language="js" title="sidebars.js">
  {require('!!raw-loader!@site/sidebars.ts')
    .default
    .split('\n')
    // remove comments
    .map((line) => !['//','/*','*'].some(commentPattern => line.trim().startsWith(commentPattern)) && line)
    .filter(Boolean)
    .join('\n')}
</CodeBlock>
```